fix .desktop file

--- a/flappy.desktop
+++ b/flappy.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Exec=/usr/share/flappy/Builds/Linux/5c_1
-Path=/usr/share/flappy
+Path=/usr/share/flappy/Builds/Linux
 Name=Flappy-Bird
 Comment=flappy
 Icon=/usr/share/flappy/assets/gfx/icon.png
